# naiveBayes

./: LICENSE  naiveBayes.py  pyproject.toml
src/: figure.py  get_data.py  prediction.py
test/: test_figure.py  test_get_data.py  test_pltfigure.py  test_prediction.py
