[tool.poetry]
name = "naivbayesv3-9"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "naivbayesv3"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
yfinance = "^0.2.33"
matplotlib = "^3.8.2"
timedelta = "^2020.12.3"
pytest = "^7.4.3"
mplfinance = "^0.12.10b0"
mpf = "^0.56.2"
cmdstanpy = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

